# smtp-server

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
src/: address.rs  commands.rs  config.rs  events.rs  lib.rs  main.rs  mda.rs  mta.rs  replies.rs  smtp.rs  stream.rs  tcp_stream.rs
