[package]
name = "smtp-server"
version = "0.1.1"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.8"
clap = "2.33"
trust-dns-resolver = "0.19"
nom = "6.0"
tokio = { version = "0.3", features = ["full"] }
tokio-native-tls = "0.2"
native-tls = "0.2"
bytes = "0.6"
async-trait = "0.1"
futures = "0.3"
email-parser = "0.4"